automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -571,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff_fhses = None\n",
+    "diff_fhses = factorial(6)/math.factorial(4)\n",
     "diff_fhses"
    ]
   },
